Fix TrmAlgorithm